Add interface and plugin for custom fetch tasks
