# src/main/java/com/yelp/nrtsearch/server/luceneserver/search/SearchContext.java
@@ -19,6 +19,7 @@ import com.yelp.nrtsearch.server.grpc.SearchResponse;
 import com.yelp.nrtsearch.server.luceneserver.IndexState;
 import com.yelp.nrtsearch.server.luceneserver.ShardState;
 import com.yelp.nrtsearch.server.luceneserver.field.FieldDef;
+import com.yelp.nrtsearch.server.luceneserver.search.fetch.FetchTasks;
 import java.util.Map;
 import java.util.Optional;
 import org.apache.lucene.facet.DrillSideways;
@@ -61,4 +62,7 @@ public interface SearchContext {
 
   /** Get collector manager for query. */
   SearchCollectorManager collectorManager();
+
+  /** Get any extra tasks that should be run during fetch */
+  FetchTasks fetchTasks();
 }
